--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -69,6 +69,18 @@
     <Compile Include="DirectoryControl.designer.cs">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Довідники\Form_Номенклатура_Папки_Дерево.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Довідники\Form_Номенклатура_Папки_Дерево.Designer.cs">
+      <DependentUpon>Form_Номенклатура_Папки_Дерево.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Довідники\Form_НоменклатураПапка.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Довідники\Form_НоменклатураПапка.designer.cs">
+      <DependentUpon>Form_НоменклатураПапка.cs</DependentUpon>
+    </Compile>
     <Compile Include="Документи\Form_ПоверненняТоварівВідКлієнта_ТабличнаЧастина_Товари.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -394,6 +406,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DirectoryControl.resx">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Довідники\Form_Номенклатура_Папки_Дерево.resx">
+      <DependentUpon>Form_Номенклатура_Папки_Дерево.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Довідники\Form_НоменклатураПапка.resx">
+      <DependentUpon>Form_НоменклатураПапка.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Документи\Form_ПоверненняТоварівВідКлієнта_ТабличнаЧастина_Товари.resx">
       <DependentUpon>Form_ПоверненняТоварівВідКлієнта_ТабличнаЧастина_Товари.cs</DependentUpon>
