--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -75,11 +75,11 @@
     <Compile Include="Довідники\Form_Номенклатура_Папки_Дерево.Designer.cs">
       <DependentUpon>Form_Номенклатура_Папки_Дерево.cs</DependentUpon>
     </Compile>
-    <Compile Include="Довідники\Form_НоменклатураПапка.cs">
+    <Compile Include="Довідники\Form_НоменклатураПапкиЕлемент.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Довідники\Form_НоменклатураПапка.designer.cs">
-      <DependentUpon>Form_НоменклатураПапка.cs</DependentUpon>
+    <Compile Include="Довідники\Form_НоменклатураПапкиЕлемент.designer.cs">
+      <DependentUpon>Form_НоменклатураПапкиЕлемент.cs</DependentUpon>
     </Compile>
     <Compile Include="Документи\Form_ПоверненняТоварівВідКлієнта_ТабличнаЧастина_Товари.cs">
       <SubType>UserControl</SubType>
@@ -410,8 +410,8 @@
     <EmbeddedResource Include="Довідники\Form_Номенклатура_Папки_Дерево.resx">
       <DependentUpon>Form_Номенклатура_Папки_Дерево.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Довідники\Form_НоменклатураПапка.resx">
-      <DependentUpon>Form_НоменклатураПапка.cs</DependentUpon>
+    <EmbeddedResource Include="Довідники\Form_НоменклатураПапкиЕлемент.resx">
+      <DependentUpon>Form_НоменклатураПапкиЕлемент.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Документи\Form_ПоверненняТоварівВідКлієнта_ТабличнаЧастина_Товари.resx">
       <DependentUpon>Form_ПоверненняТоварівВідКлієнта_ТабличнаЧастина_Товари.cs</DependentUpon>
