--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -69,6 +69,12 @@
     <Compile Include="DirectoryControl.designer.cs">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Довідники\Form_НоменклатураПапки.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Довідники\Form_НоменклатураПапки.designer.cs">
+      <DependentUpon>Form_НоменклатураПапки.cs</DependentUpon>
+    </Compile>
     <Compile Include="Довідники\Form_Номенклатура_Папки_Дерево.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -406,6 +412,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DirectoryControl.resx">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Довідники\Form_НоменклатураПапки.resx">
+      <DependentUpon>Form_НоменклатураПапки.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Довідники\Form_Номенклатура_Папки_Дерево.resx">
       <DependentUpon>Form_Номенклатура_Папки_Дерево.cs</DependentUpon>
